# camera_ws

./: CMakeLists.txt  main.cpp  saito_camera_calib.yml  test.cpp
fry_ws/install/: local_setup.sh  setup.sh
fry_ws/install/ball_detector/lib/ball_detector/: ball_detector_node
fry_ws/install/ball_detector/share/ament_index/resource_index/parent_prefix_path/: ball_detector
fry_ws/install/ball_detector/share/ball_detector/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
fry_ws/log/: latest_build
fry_ws/src/ball_detector/: CMakeLists.txt  CmakeLists.txt  camera_calib.yml  package.xml
fry_ws/src/ball_detector/src/: main.cpp
